fixed spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -130,7 +130,7 @@ main {
 }
 
 main p {
-    margin-bottom: 1.8rem;
+    margin-bottom: 1.2rem;
 }
 
 .status-note {
@@ -175,14 +175,14 @@ footer {
     body {
         padding: 1.5rem 1.3rem 0 1.3rem;
         font-size: 16.5px;
-        line-height: 1.85;
+        line-height: 1.7;
     }
     main {
         margin-top: 1rem;
         margin-bottom: 1rem;
     }
     main p {
-        margin-bottom: 1.5rem;
+        margin-bottom: 1.2rem;
     }
     footer {
         margin-top: 1.5rem;
